Microdesafio flexbox completo - formularios casi listo

--- a/views/home.html
+++ b/views/home.html
@@ -244,26 +244,26 @@
                 <li>
                     <i class="fas fa-credit-card"></i>
                     <h3> Pagá con tarjeta o en efectivo </h3>
-                    <p> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    <p class="piePagina"> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                         puntos de pago. ¡Y siempre es seguro!
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-gift"></i>
                     <h3> Envío gratis desde $ 2.500 </h3>
-                    <p> Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    <p class="piePagina"> Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                         productos. Es un beneficio de Mercado Puntos.
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-user-shield"></i>
                     <h3> Seguridad, de principio a fin </h3>
-                    <p> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    <p class="piePagina"> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                         porque estás siempre protegid@.
                     </p>
                 </li>
                 <li class="copyright">
-                    <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+                    <p class="piePagina">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
                 </li>
 
             </ul>
