--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,10 +18,7 @@ img {
 }
 
 
-p {
-    font-size: 12px;
-    margin-top: 0px;
-}
+
 
 h1,
 h2,
@@ -60,26 +57,6 @@ i.fa-search {
     border-radius: 4px;
     color: #666;
 
-}
-
-
-
-footer {
-    text-align: center;
-}
-
-i.fas.fa-credit-card,
-i.fas.fa-gift,
-i.fas.fa-user-shield {
-    font-size: 2em;
-    margin-bottom: 10px;
-    color: #03264C;
-
-}
-
-.copyright {
-    text-align: left;
-    margin-top: 40px;
 }
 
 .titular {
@@ -180,6 +157,32 @@ article {
  
 
 
+/*//*//*//*//*//* FOOTER /*//*//*//*//*/
+
+footer {
+    text-align: center;
+}
+
+i.fas.fa-credit-card,
+i.fas.fa-gift,
+i.fas.fa-user-shield {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #03264C;
+
+}
+
+.copyright {
+    text-align: left;
+    margin-top: 40px;
+}
+
+.piePagina {
+    font-size: 12px;
+    margin-top: 0px;
+}
+
+/*//*//*//*//*//* MEDIAS QUERIES /*//*//*//*//*/
 
 @media(min-width: 425px) {
     .barra-navegacion,
@@ -224,10 +227,10 @@ article {
     }
 
     .promociones{
-        align-self: auto;
         padding: 5px 5px;
         margin: 10px 0px 10px 0px;
         height: 2rem;
+        align-self: center;
     }
 
     .barra-nav1{
@@ -256,7 +259,4 @@ article {
         width: 20%;
     }
 
-    .promociones{
-        align-self: center;
-    }
 }
