--- a/views/home.html
+++ b/views/home.html
@@ -20,27 +20,30 @@
         <section class="encabezado">
 
             <!-- LOGO -->
-                <div class="logo">
-                    <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
-                </div>
+            <div class="logo">
+                <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
+            </div>
 
-                  <!-- BARRA BUSQUEDA -->
-                <div class="form" action="/" method="GET">
-                    <input class="barra-busqueda" type="text" name="buscar" id="buscar"
-                        placeholder="Buscar productos, marcas y mas">
-                    <span class="boton-busqueda">
-                        <button type="submit"> <i class="fa fa-search"></i> </button>
-                    </span>
-                </div>
+            <!-- BARRA BUSQUEDA -->
+            <div class="form" action="/" method="GET">
+                <input class="barra-busqueda" type="text" name="buscar" id="buscar"
+                    placeholder="Buscar productos, marcas y mas">
+                <span class="boton-busqueda">
+                    <button type="submit"> <i class="fa fa-search"></i> </button>
+                </span>
+            </div>
 
             <!-- PROMOCIONES -->
-            
-                <div class="promociones">
+
+            <div class="promociones">
+                <p>
                     <i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de
-                        credito  
-                </div>
-        
-            
+                    credito
+                </p>
+
+            </div>
+
+
 
         </section>
 
@@ -96,7 +99,7 @@
                             </div>
                         </div>
                         <div class="descripcion">
-                            Cafetera Moulinex
+                            Cafetera Moulinex 
                         </div>
                     </div>
 
@@ -240,7 +243,7 @@
 
     <footer>
         <section>
-            <ul type="none">
+            <ul class="lista-footer" type="none">
                 <li>
                     <i class="fas fa-credit-card"></i>
                     <h3> Pagá con tarjeta o en efectivo </h3>
@@ -262,11 +265,12 @@
                         porque estás siempre protegid@.
                     </p>
                 </li>
-                <li class="copyright">
-                    <p class="piePagina">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-                </li>
 
             </ul>
+
+            <div class="copyright">
+                <p class="piePagina">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            </div>
 
         </section>
 
