--- a/views/register.html
+++ b/views/register.html
@@ -153,9 +153,10 @@
 
     </form>
 
+   
     <footer>
         <section>
-            <ul type="none">
+            <ul class="lista-footer" type="none">
                 <li>
                     <i class="fas fa-credit-card"></i>
                     <h3> Pagá con tarjeta o en efectivo </h3>
@@ -177,11 +178,12 @@
                         porque estás siempre protegid@.
                     </p>
                 </li>
-                <li class="copyright">
-                    <p class="piePagina">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-                </li>
 
             </ul>
+
+            <div class="copyright">
+                <p class="piePagina">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            </div>
 
         </section>
 
