--- a/public/css/stylesregister.css
+++ b/public/css/stylesregister.css
@@ -149,7 +149,18 @@ i.fa-search {
         width: 20%;
     }
 
+    .lista-footer{
+        display: flex;
+        box-sizing: border-box;
+    }
 
+    .fas.fa-user-shield:hover, .fas.fa-gift:hover, .fas.fa-credit-card:hover {
+        color:rgb(103, 99, 99)
+    }
+
+    .piePagina{
+        padding: 7px;
+    }
 }
 
 
@@ -184,7 +195,7 @@ i.fas.fa-user-shield {
     display: flex;
     flex-flow: column wrap;
     width: 100%;
-    padding: 20px 1px 20px 1px;
+    padding: 1px;
     background-color: #c6c2c2e3;
     border-radius: 5px;
 }
